--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,12 @@
 {
     "custom_app_names": {},
-    "autosave": true
+    "autosave": true,
+    "pomodoro_timer": 25,
+    "short_break": 5,
+    "long_break": 15,
+    "long_break_interval": 4,
+    "inactivity_threshold": 5,
+    "color_theme": "light",
+    "font": "Lucida Console",
+    "zoom_scale": 1.0
 }
