--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "afk_detection": false,
+    "afk_detection": true,
     "custom_app_names": {},
     "autosave": true,
     "pomodoro_timer": 25,
@@ -7,9 +7,9 @@
     "long_break": 15,
     "long_break_interval": 4,
     "theme": "blue",
-    "mode": "Light",
+    "mode": "Dark",
     "dynamic_schedule": "pomodoro",
     "response_type": 1,
     "reminder": "high",
-    "afk_threshold": 0
+    "afk_threshold": 30
 }
